--- a/.github/workflows/release-cli-manual.yaml
+++ b/.github/workflows/release-cli-manual.yaml
@@ -356,5 +356,5 @@ jobs:
           SNAPSHOT_NAME="testkube-${VERSION}-$(date +%s)"
           curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X POST -H 'Content-Type: application/json' --data '{"Name":"'${SNAPSHOT_NAME}'"}' http://${APTLY_URL}/api/repos/testkube/snapshots
 
-          ### Publish repo with new snapshot
-          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X PUT -H 'Content-Type: application/json' --data '{"Snapshots": [{"Component": "main", "Name": "'${SNAPSHOT_NAME}'"}]}' http://repo.testkube.io:8080/api/publish/:linux/linux
+          ### Publish repo with new snapshot (ForceOverwrite handles conflicts in published pool)
+          curl --fail-with-body -u ${USERNAME}:${PASSWORD} -X PUT -H 'Content-Type: application/json' --data '{"Snapshots": [{"Component": "main", "Name": "'${SNAPSHOT_NAME}'"}], "ForceOverwrite": true}' http://repo.testkube.io:8080/api/publish/:linux/linux
