feat: webhooks to control plane (#6757)
* notes

* notes

* refactor: webhook loader with opts

* refactor: webhook listener with opts

* fix: check during become queries

* notes

* fix: handle not set metrics

* fix: handle secret client not set

* notes

* fix: make webhooks repository optional

* feat: make webhook template client optional

* refactor: mark deprecated

* refactor: rename repository for consistency

* refactor: reduce the webhook client interface

* refactor: unnecessary predicate

* notes

* notes

* notes

* chore: remove unused

* notes

* refactor: emitter reduce exported fields/methods

* notes

* notes

* refactor: matching of events logic moved to listeners

* refactor: single subscription per emitter

* notes

* refactor: make procontext optional

* notes

* refactor: make event emitter subject root configurable

* notes

* notes

* feat: webhooks capabalities

* feat: disable agent-based webhooks when cloud-based enabled

* feat: registration updates and super agent registration

* fix: pass procontext to deprecated system for auth

* fix: resource and resource id in payloads

* feat: event emitter leases

* fix: switch to go tool

* fix: unit tests

* chore: fix lint

* docs: clean up todos

* chore: integration tests

* fix: make lease name unique per release

* chore: clean up

* chore: clean up

* chore: clean up

* refactor: simplify mutex usage for listeners slice/map

* fix: access to listeners and simplify notify call

* fix: lease backend test

--- a/k8s/helm/testkube-api/values.yaml
+++ b/k8s/helm/testkube-api/values.yaml
@@ -207,7 +207,7 @@ cloud:
   uiUrl: ""
   ## Public Agent ID
   agentId: ""
-  ## Agent Token / Secret Key
+  ## Legacy Agent Token / Secret Key value now used as registration token
   key: ""
   ## Organization ID
   orgId: ""
@@ -239,7 +239,7 @@ cloud:
   existingSecret:
     ## Name of the secret. If set, this will be used instead of the above values
     name: ""
-    ## Key for the License Key
+    ## Key for the legacy Agent Token / Secret Key value now used as registration token
     key: ""
     ## Key for the Organization ID
     orgId: ""
