--- a/k8s/helm/testkube-runner/templates/deployment.yaml
+++ b/k8s/helm/testkube-runner/templates/deployment.yaml
@@ -36,6 +36,11 @@ spec:
         {{- if .Values.pod.labels }}
         {{- include "global.tplvalues.render" ( dict "value" .Values.pod.labels "context" $ ) | nindent 8 }}
         {{- end }}
+        {{- if .Values.runner.register.labels }}
+        {{- range $key, $value := .Values.runner.register.labels }}
+        {{ $.Values.runner.register.labelPrefix }}{{ $key }}: {{ $value | quote }}
+        {{- end }}
+        {{- end }}
       annotations:
         {{- if .Values.global.annotations }}
         {{- include "global.tplvalues.render" ( dict "value" .Values.global.annotations "context" $ ) | nindent 8 }}
@@ -168,6 +173,8 @@ spec:
           securityContext: {{ include "testkube-runner.containerSecurityContext" . | nindent 12 }}
           env:
             # Runner configuration
+            - name: DEBUG
+              value: "true"
             {{- if not .Values.runner.enabled }}
             - name: "DISABLE_RUNNER"
               value: "true"
