--- a/k8s/helm/testkube-runner/values.yaml
+++ b/k8s/helm/testkube-runner/values.yaml
@@ -118,6 +118,7 @@ images:
     ## Overrides the image tag whose default is the chart appVersion.
     # tag: "2.1.147"
     digest: ""
+    tagSuffix: ""
     pullSecrets: []
 
   toolkit:
@@ -126,6 +127,7 @@ images:
     ## Overrides the image tag whose default is the api-server version.
     # tag: "2.1.147"
     digest: ""
+    tagSuffix: ""
 
   init:
     registry: docker.io
@@ -133,6 +135,7 @@ images:
     ## Overrides the image tag whose default is the api-server version.
     # tag: "2.1.147"
     digest: ""
+    tagSuffix: ""
 
 ## Persistent cache for Docker
 imageInspectionCache:
