feat: auto registering agent mode labels (#6841)
* feat: add runner mode and labels when auto-registering through grpc method

* fix: cloud interface new properties get methods

* fix: linting alerts

* chore: force global mode for super agent

* fix: proto of agent request new fields

* chore: add agent labels to agent pod as well

* fix: debug agent labels to be configured

* chore: remove forced debug mode for runner

* fix: remove unneeded imports

--- a/k8s/helm/testkube-runner/templates/deployment.yaml
+++ b/k8s/helm/testkube-runner/templates/deployment.yaml
@@ -36,6 +36,11 @@ spec:
         {{- if .Values.pod.labels }}
         {{- include "global.tplvalues.render" ( dict "value" .Values.pod.labels "context" $ ) | nindent 8 }}
         {{- end }}
+        {{- if .Values.runner.register.labels }}
+        {{- range $key, $value := .Values.runner.register.labels }}
+        {{ $.Values.runner.register.labelPrefix }}{{ $key }}: {{ $value | quote }}
+        {{- end }}
+        {{- end }}
       annotations:
         {{- if .Values.global.annotations }}
         {{- include "global.tplvalues.render" ( dict "value" .Values.global.annotations "context" $ ) | nindent 8 }}
