fix issue where windows installer was not getting trigerred when skip build flag is set
Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>

--- a/.github/workflows/release-cli-manual.yaml
+++ b/.github/workflows/release-cli-manual.yaml
@@ -183,7 +183,7 @@ jobs:
   build-and-publish-windows-installer:
     needs: release
     runs-on: windows-latest
-    if: ${{ inputs.confirm == 'yes' && !inputs.skip_build }}
+    if: ${{ always() && inputs.confirm == 'yes' && (inputs.skip_build || needs.release.result == 'success') }}
 
     steps:
       - name: Checkout
@@ -192,11 +192,38 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0
 
-      - name: Get Intermediate Artifacts
+      - name: Get Intermediate Artifacts (from workflow)
+        if: ${{ !inputs.skip_build }}
         uses: actions/download-artifact@master
         with:
           name: testkube_windows
           path: windows
+
+      - name: Get tag
+        id: tag
+        shell: bash
+        run: |
+          # Find tag pointing to current commit
+          TAG=$(git describe --tags --exact-match 2>/dev/null || git describe --tags --abbrev=0 2>/dev/null || echo "")
+          if [ -z "$TAG" ]; then
+            echo "Error: No tag found"
+            exit 1
+          fi
+          # Strip 'v' prefix if present
+          TAG_STRIPPED=${TAG#v}
+          echo "tag=$TAG_STRIPPED" >> $GITHUB_OUTPUT
+          echo "Found tag: $TAG (stripped: $TAG_STRIPPED)"
+
+      - name: Download Windows binary from GitHub Release
+        if: ${{ inputs.skip_build }}
+        shell: bash
+        env:
+          VERSION: ${{steps.tag.outputs.tag}}
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          mkdir -p windows/testkube_windows_386
+          gh release download ${VERSION} --pattern "testkube_${VERSION}_Windows_i386.zip" --dir windows/temp
+          unzip windows/temp/testkube_${VERSION}_Windows_i386.zip -d windows/testkube_windows_386
 
       - name: Create and Sign MSI
         run: |
@@ -217,21 +244,6 @@ jobs:
           file_path: testkube.msi
           output_path: ${GITHUB_WORKSPACE}\artifacts
           malware_block: false
-
-      - name: Get tag
-        id: tag
-        shell: bash
-        run: |
-          # Find tag pointing to current commit
-          TAG=$(git describe --tags --exact-match 2>/dev/null || git describe --tags --abbrev=0 2>/dev/null || echo "")
-          if [ -z "$TAG" ]; then
-            echo "Error: No tag found"
-            exit 1
-          fi
-          # Strip 'v' prefix if present
-          TAG_STRIPPED=${TAG#v}
-          echo "tag=$TAG_STRIPPED" >> $GITHUB_OUTPUT
-          echo "Found tag: $TAG (stripped: $TAG_STRIPPED)"
 
       - name: Get release
         id: get_release
