fix: remove helm expression workaround

--- a/k8s/templates/distribute--evenly.yaml
+++ b/k8s/templates/distribute--evenly.yaml
@@ -14,11 +14,11 @@ spec:
       default: ""
   pod:
     labels:
-      distribute-evenly: {{`"{{execution.id}}{{config.name}}"`}}
+      distribute-evenly: "{{execution.id}}{{config.name}}"
     topologySpreadConstraints:
     - maxSkew: 1
       topologyKey: kubernetes.io/hostname
       whenUnsatisfiable: ScheduleAnyway
       labelSelector:
         matchLabels:
-          distribute-evenly: {{`"{{execution.id}}{{config.name}}"`}}
+          distribute-evenly: "{{execution.id}}{{config.name}}"
