--- a/k8s/templates/official--k6--v1.yaml
+++ b/k8s/templates/official--k6--v1.yaml
@@ -34,5 +34,5 @@ spec:
   steps:
   - name: Run k6 tests
     run:
-      image: {{`"grafana/k6:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
+      image: "grafana/k6:{{ config.version }}"
+      shell: "{{ config.run }}"
