--- a/k8s/templates/official--maven--beta.yaml
+++ b/k8s/templates/official--maven--beta.yaml
@@ -25,5 +25,5 @@ spec:
   steps:
   - name: Run Maven command
     run:
-      image: {{`"maven:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
+      image: "maven:{{ config.version }}"
+      shell: "{{ config.run }}"
