--- a/k8s/templates/official--playwright--beta.yaml
+++ b/k8s/templates/official--playwright--beta.yaml
@@ -27,10 +27,10 @@ spec:
       type: string
       default: "npx playwright test"
   container:
-    image: {{`"mcr.microsoft.com/playwright:v{{ config.version }}"`}}
+    image: "mcr.microsoft.com/playwright:v{{ config.version }}"
   steps:
   - name: Install dependencies
-    shell: {{`"{{ config.dependencies_command }}"`}}
+    shell: "{{ config.dependencies_command }}"
   - name: Run Playwright tests
     run:
-      shell: {{`"{{ config.run }}"`}}
+      shell: "{{ config.run }}"
