--- a/k8s/templates/official--gradle--v1.yaml
+++ b/k8s/templates/official--gradle--v1.yaml
@@ -26,5 +26,5 @@ spec:
   steps:
   - name: Run Gradle command
     run:
-      image: {{`"gradle:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
+      image: "gradle:{{ config.version }}"
+      shell: "{{ config.run }}"
