--- a/k8s/templates/official--jmeter--beta.yaml
+++ b/k8s/templates/official--jmeter--beta.yaml
@@ -25,5 +25,5 @@ spec:
   steps:
   - name: Run JMeter tests
     run:
-      image: {{`"justb4/jmeter:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
+      image: "justb4/jmeter:{{ config.version }}"
+      shell: "{{ config.run }}"
