--- a/k8s/templates/official--k6--beta.yaml
+++ b/k8s/templates/official--k6--beta.yaml
@@ -32,5 +32,5 @@ spec:
   steps:
   - name: Run k6 tests
     run:
-      image: {{`"grafana/k6:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
+      image: "grafana/k6:{{ config.version }}"
+      shell: "{{ config.run }}"
