--- a/k8s/templates/official--maven--v1.yaml
+++ b/k8s/templates/official--maven--v1.yaml
@@ -26,5 +26,5 @@ spec:
   steps:
   - name: Run Maven command
     run:
-      image: {{`"maven:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
+      image: "maven:{{ config.version }}"
+      shell: "{{ config.run }}"
