--- a/k8s/templates/official--postman--v1.yaml
+++ b/k8s/templates/official--postman--v1.yaml
@@ -26,5 +26,5 @@ spec:
   steps:
   - name: Run Postman tests
     run:
-      image: {{`"postman/newman:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
+      image: "postman/newman:{{ config.version }}"
+      shell: "{{ config.run }}"
