feat: auto registering agent mode labels (#6861)
* feat: add runner mode and labels when auto-registering through grpc method

* fix: cloud interface new properties get methods

* fix: linting alerts

* chore: force global mode for super agent

* fix: proto of agent request new fields

* chore: add agent labels to agent pod as well

* fix: debug agent labels to be configured

* chore: remove forced debug mode for runner

* fix: remove unneeded imports

* chore: add missing env var for runner when user wants to use another runner label prefix

* feat: update runner policy from CLI

* fix: linting

--- a/k8s/helm/testkube-runner/templates/deployment.yaml
+++ b/k8s/helm/testkube-runner/templates/deployment.yaml
@@ -368,6 +368,10 @@ spec:
               value: "{{ .Values.runner.register.floating }}"
             - name: RUNNER_IS_GLOBAL
               value: "{{ .Values.runner.register.global }}"
+            {{- if .Values.runner.register.labelPrefix }}
+            - name: RUNNER_LABELS_PREFIX
+              value: "{{ .Values.runner.register.labelPrefix }}"
+            {{- end }}
             {{- if .Values.runner.register.groupName }}
             - name: RUNNER_GROUP
               value: "{{ .Values.runner.register.groupName }}"
