chore: add official template wrapper client (#6855)
* chore: add official template wrapper client

* chore: decorate existing clients

* chore: remove official templates from Helm Chart

* chore: simplify has template operations

* fix: remove helm expression workaround

* fix: fix parsing of Template CRD

* fix: expose with-official for cloud impl

* feat: respect createOfficialTemplate flag

* Update k8s/helm/testkube-api/templates/deployment.yaml

Co-authored-by: Povilas Versockas <p.versockas@gmail.com>

---------

Co-authored-by: Povilas Versockas <p.versockas@gmail.com>

--- a/k8s/templates/official--artillery--v1.yaml
+++ b/k8s/templates/official--artillery--v1.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.global.testWorkflows.createOfficialTemplates }}
 kind: TestWorkflowTemplate
 apiVersion: testworkflows.testkube.io/v1
 metadata:
@@ -43,8 +42,7 @@ spec:
   steps:
   - name: Run Artillery tests
     run:
-      image: {{`"artilleryio/artillery:{{ config.version }}"`}}
+      image: "artilleryio/artillery:{{ config.version }}"
       shell: |
-        {{`artillery() { {{ config.artillery_binary }} $@; }
-        {{ config.run }}`}}
-{{- end }}
+        artillery() { {{ config.artillery_binary }} $@; }
+        {{ config.run }}
