--- a/k8s/templates/official--cypress--beta.yaml
+++ b/k8s/templates/official--cypress--beta.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.global.testWorkflows.createOfficialTemplates }}
 kind: TestWorkflowTemplate
 apiVersion: testworkflows.testkube.io/v1
 metadata:
@@ -28,10 +27,9 @@ spec:
       type: string
       default: "npx cypress run"
   container:
-    image: {{`"cypress/included:{{ config.version }}"`}}
+    image: "cypress/included:{{ config.version }}"
   steps:
   - name: Install dependencies
-    shell: {{`"{{ config.dependencies_command }}"`}}
+    shell: "{{ config.dependencies_command }}"
   - name: Run Cypress tests
-    shell: {{`"{{ config.run }}"`}}
-{{- end }}
+    shell: "{{ config.run }}"
