--- a/k8s/templates/official--postman--beta.yaml
+++ b/k8s/templates/official--postman--beta.yaml
@@ -1,11 +1,10 @@
-{{- if .Values.global.testWorkflows.createOfficialTemplates }}
 kind: TestWorkflowTemplate
 apiVersion: testworkflows.testkube.io/v1
 metadata:
-  name: official--postman--v1
+  name: official--postman--beta
   labels:
     testkube.io/name: Postman
-    testkube.io/wizard: enabled
+    testkube.io/wizard: disabled
   annotations:
     helm.sh/hook: post-install,post-upgrade
     helm.sh/hook-weight: "19"
@@ -13,7 +12,6 @@ metadata:
     testkube.io/categories: API
     testkube.io/description: Run Postman tests
     testkube.io/icon: postman
-    testkube.io/image: postman/newman
 spec:
   config:
     version:
@@ -27,6 +25,5 @@ spec:
   steps:
   - name: Run Postman tests
     run:
-      image: {{`"postman/newman:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
-{{- end }}
+      image: "postman/newman:{{ config.version }}"
+      shell: "{{ config.run }}"
