--- a/k8s/helm/testkube-api/templates/deployment.yaml
+++ b/k8s/helm/testkube-api/templates/deployment.yaml
@@ -156,6 +156,10 @@ spec:
               value:  "{{ .Values.podStartTimeout }}"
             - name: CDEVENTS_TARGET
               value: "{{ .Values.cdeventsTarget }}"
+            {{- if not .Values.global.testWorkflows.createOfficialTemplates }}
+            - name: DISABLE_OFFICIAL_TEMPLATES
+              value: "true"
+            {{- end}}
             - name: TESTKUBE_DASHBOARD_URI
               value: "{{ .Values.dashboardUri }}"
             - name: TESTKUBE_CLUSTER_NAME
