--- a/k8s/templates/distribute--evenly.yaml
+++ b/k8s/templates/distribute--evenly.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.global.testWorkflows.createOfficialTemplates }}
 kind: TestWorkflowTemplate
 apiVersion: testworkflows.testkube.io/v1
 metadata:
@@ -15,12 +14,11 @@ spec:
       default: ""
   pod:
     labels:
-      distribute-evenly: {{`"{{execution.id}}{{config.name}}"`}}
+      distribute-evenly: "{{execution.id}}{{config.name}}"
     topologySpreadConstraints:
     - maxSkew: 1
       topologyKey: kubernetes.io/hostname
       whenUnsatisfiable: ScheduleAnyway
       labelSelector:
         matchLabels:
-          distribute-evenly: {{`"{{execution.id}}{{config.name}}"`}}
-{{- end }}
+          distribute-evenly: "{{execution.id}}{{config.name}}"
