--- a/k8s/templates/official--gradle--beta.yaml
+++ b/k8s/templates/official--gradle--beta.yaml
@@ -1,11 +1,10 @@
-{{- if .Values.global.testWorkflows.createOfficialTemplates }}
 kind: TestWorkflowTemplate
 apiVersion: testworkflows.testkube.io/v1
 metadata:
-  name: official--gradle--v1
+  name: official--gradle--beta
   labels:
     testkube.io/name: Gradle
-    testkube.io/wizard: enabled
+    testkube.io/wizard: disabled
   annotations:
     helm.sh/hook: post-install,post-upgrade
     helm.sh/hook-weight: "19"
@@ -13,7 +12,6 @@ metadata:
     testkube.io/categories: Other
     testkube.io/description: Gradle
     testkube.io/icon: gradle
-    testkube.io/image: gradle
 spec:
   config:
     version:
@@ -27,6 +25,5 @@ spec:
   steps:
   - name: Run Gradle command
     run:
-      image: {{`"gradle:{{ config.version }}"`}}
-      shell: {{`"{{ config.run }}"`}}
-{{- end }}
+      image: "gradle:{{ config.version }}"
+      shell: "{{ config.run }}"
