--- a/k8s/templates/official--playwright--v1.yaml
+++ b/k8s/templates/official--playwright--v1.yaml
@@ -1,38 +1,37 @@
-{{- if .Values.global.testWorkflows.createOfficialTemplates }}
 kind: TestWorkflowTemplate
 apiVersion: testworkflows.testkube.io/v1
 metadata:
-  name: official--cypress--v1
+  name: official--playwright--v1
   labels:
-    testkube.io/name: Cypress
+    testkube.io/name: Playwright
     testkube.io/wizard: enabled
   annotations:
     helm.sh/hook: post-install,post-upgrade
     helm.sh/hook-weight: "19"
     helm.sh/hook-delete-policy: hook-failed,before-hook-creation
     testkube.io/categories: E2E
-    testkube.io/description: Run Cypress tests
-    testkube.io/icon: cypress
-    testkube.io/image: cypress/included
+    testkube.io/description: Run Playwright tests
+    testkube.io/icon: playwright
+    testkube.io/image: mcr.microsoft.com/playwright
 spec:
   config:
     dependencies_command:
       description: Command to install dependencies
       type: string
-      default: npm install
+      default: npm ci
     version:
-      description: Cypress version to use
+      description: Playwright version to use
       type: string
-      default: 13.6.4
+      default: v1.43.0
     run:
       description: Run command
       type: string
-      default: "npx cypress run"
+      default: "npx playwright test"
   container:
-    image: {{`"cypress/included:{{ config.version }}"`}}
+    image: "mcr.microsoft.com/playwright:{{ config.version }}"
   steps:
   - name: Install dependencies
-    shell: {{`"{{ config.dependencies_command }}"`}}
-  - name: Run Cypress tests
-    shell: {{`"{{ config.run }}"`}}
-{{- end }}
+    shell: "{{ config.dependencies_command }}"
+  - name: Run Playwright tests
+    run:
+      shell: "{{ config.run }}"
